Do not synthesize a double click event if the event point moved too far

We need to respect QPlatformTheme::TouchDoubleTapDistance

Fixes: QTBUG-75770
Change-Id: I2adc7097bb29cb93beb2609a8a806a666856a0c8
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>